# wkeys

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix
.github/workflows/: build.yml
assets/: default-60%.toml  default-style.css
cosmic-applet/: Cargo.toml  README.md
cosmic-applet/assets/: wkeys-applet.desktop
cosmic-applet/src/: applet.rs  main.rs
src/: ipc.rs  main.rs  service.rs  ui.rs  utils.rs
src/layout/: assets.rs  mod.rs  parse.rs
src/native/: virtual_keyboard.rs
src/service/: client.rs  host.rs  mod.rs
src/ui/: main_view.rs  mod.rs
src/ui/components/: button_ex.rs  mod.rs
src/ui/style/: assets.rs
wkeys/: Cargo.toml  README.md  flake.nix
wkeys/src/: config.rs  ipc.rs  main.rs  utils.rs
wkeys/src/layout/: parse.rs
wkeys/src/native/: mod.rs  session.rs  virtual_keyboard.rs
wkeys/src/service/: host.rs  mod.rs
wkeys/src/ui/: main_view.rs
wkeys/src/ui/components/: button_ex.rs
