[package]
name = "wkeys"
version = "0.1.0"
edition = "2021"

[dependencies]
evdev = "0.12.2"
gtk4-layer-shell = "0.4.0"
relm4 = "0.9.0"
rust-embed = "8.5.0"
tempfile = "3.12.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wayland-client = "0.31.6"
wayland-protocols-misc = { version = "0.3.4", features = [
    "client",
    "wayland-client",
] }
xkbcommon = "0.8.0"
